--- a/.htaccess
+++ b/.htaccess
@@ -10,8 +10,9 @@ RewriteEngine on
 
 # does not apply to existing directories, meaning that if the folder exists on the server then don't change anything and don't run the Rule!
 
-RewriteCond %{REQUEST_FILENAME} !-d
 
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
 # Check for file in directory with .php extension
 
 RewriteCond %{REQUEST_FILENAME}\.php -f
